--- a/styles.css/portfolio.css
+++ b/styles.css/portfolio.css
@@ -11,13 +11,18 @@ body {
 .btn-primary {
      border-radius: 5px;
      background: #FD6E0A;
+     border: 0;
+     font-size: 20px;
+     font-weight: 700;
+     padding: 15px 35px ;
 }
 
 /* navigation related styles */
 
 nav {
      display: flex;
-
+     justify-content: space-between;
+     align-items: center;
 }
 
 .nav-title {
@@ -29,6 +34,7 @@ nav {
 
 nav > ul{
      display: flex;
+     align-items: center;
 }
 
 
